--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -13,8 +13,8 @@ jobs:
         sudo apt-get -y install valgrind
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name : make 
-      run : make -C ./3_Implementation/
+      run : make -C 3_Implementation/
     - name: make test
       run: |
-        make run -C ./3_Implementation/
+        make run -C 3_Implementation/
         valgrind ./all.out
